...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_id"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        app:elevation="0dp"
        android:background="@color/colorPrimaryDark">
        <!-- Displays the content of your wallet-->
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shilsac"
                android:src="@mipmap/shil" />

            <TextView
                android:id="@+id/wallet_shil_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/quidsac"
                android:src="@mipmap/quid" />

            <TextView
                android:id="@+id/wallet_quid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
...
                android:contentDescription="@string/profile_picture" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <!-- tabs for viewpager are here-->
    <android.support.design.widget.TabLayout
        android:layout_marginTop="1dp"
        android:id="@+id/tabLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/nav_item_colors"
        app:tabMode="fixed"
        app:tabTextColor="@color/nav_item_colors" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

</LinearLayout>
