...
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string><!-- this is the actual name of the app, so no problem here -->
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="depot">Depot</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="launchericon">launchericon</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="red_arrow_up">red arrow up</string>
...
    <string name="i_understand_that_this_will_halve_the_amount_of_gold_i_currently_have">This will halve your current gold. Confirm your intention!</string>
    <string name="switch_team">switch team</string>
    <string name="coin_img">coin img</string>
    <string name="select_items_to_trade">Select items to trade</string>
    <string name="how_much_gold_do_you_want">How much Gold do you want?</string>
    <string name="cancel">Cancel</string>
    <string name="place_offer">Place offer</string>
    <string name="team_icon">team icon</string>
    <string name="zone_balance">Zone-Balance</string>
    <string name="gold_creepers">Gold Creepers</string>
    <string name="coin_carvers">Coin Carvers</string>
    <string name="support_team">Support Team</string>
    <string name="movingsac">movingsac</string>
...
    <string name="exchange">Exchange</string>
    <string name="dolr_0">DOLR: 0</string>
    <string name="quid_0">QUID: 0</string>
    <string name="peny_0">PENY: 0</string>
    <string name="filter_by_username">Filter by username</string>
    <string name="browse_offers">browse offers</string>
    <string name="make_offers">make offers</string>
    <string name="drag_amount">Drag the amount of gold you want to place onto the zone you want to acquire for your team.</string>
    <string name="grab">grab</string>
    <string name="_2000g">2000G</string>
    <string name="_4000g">4000G</string>
    <string name="_6000g">6000G</string>
    <string name="_8000g">8000G</string>
...
